Modificaciones de las ventanas y implementacion de ayudas

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,10 +31,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.gson-2.8.6.jar=C:\\Users\\juanc\\Downloads\\gson-2.8.6.jar
+file.reference.gson-2.8.6.jar-1=C:\\Users\\Vasquez10\\Downloads\\gson-2.8.6.jar
 includes=**
 jar.compress=true
 javac.classpath=\
-    ${file.reference.gson-2.8.6.jar}
+    ${file.reference.gson-2.8.6.jar}:\
+    ${file.reference.gson-2.8.6.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
