--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -64,7 +64,7 @@ javadoc.windowtitle=
 main.class=Main.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
-mkdist.disabled=true
+mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
